# fbr-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml  main.yml
src/: config.rs  lib.rs  main.rs  state.rs
src/controllers/: mod.rs  test.rs
src/routes/: mod.rs
