[package]
name = "fbr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6.20"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
once_cell = "1.18.0"
async-once-cell = "0.5.3"
dotenv = "0.15.0"
tower-http = { version = "0.4.4", features = ["trace"] }
serde_json = "1.0.107"
hyper = { version = "0.14.27", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
